# PaddleRat

./: .env.example  .gitignore  Progress.md  README.md  docker-compose.yml
api/: Dockerfile  alembic.ini  pyproject.toml  railway.toml
api/alembic/: env.py
api/alembic/versions/: 243b57500286_initial_schema.py  29a19fed730a_use_timestamptz_for_all_datetime_columns.py  605017d1ae58_add_position_to_invitations.py  71b815cc4dfe_add_series_teams_player_teams_tables.py  7200d467c98b_add_phone_public_to_users.py  a3b2c1d4e5f6_add_shared_lists_table.py  c1161363fcb0_add_waitlist_table.py  ebbd01cc51b0_add_magic_tokens_invite_links_tables_.py
api/app/: config.py  dependencies.py  main.py  models.py  schemas.py  utils.py
api/app/routers/: admin.py  auth.py  contacts.py  directory.py  groups.py  invite.py  sessions.py  share.py  waitlist.py  webhooks.py
api/app/scripts/: seed_users.py
api/app/services/: auth.py  calendar.py  email.py  expiry.py  invitation.py  sms.py
data/: apta.db
docs/: privacy.html  terms.html  user-flows.md
scraper/: package-lock.json  package.json
scraper/src/: index.js  query.js
scraper/src/db/: init.js  queries.js
scraper/src/scrapers/: playerScraper.js  seriesScraper.js  siteExplorer.js
scraper/src/utils/: browser.js  logger.js
web/: index.html  package-lock.json  package.json  railway.toml
web/src/: App.css  App.tsx
web/src/lib/: api.ts  auth.tsx
web/src/pages/: Admin.tsx  Contacts.tsx  Dashboard.tsx  ImportList.tsx  Join.tsx  Landing.tsx  Login.tsx  NewSession.tsx  SessionDetail.tsx
